frontend/src/app/rss/rss-article-details/rss-article-details.component.css
.content {
  word-wrap: break-word;
}

.content * {
  max-width: 700px;
  margin-left: auto;
  margin-right: auto;
}

.content img {
  display: block;
  max-width: 100%;
  height: auto;
}

.content figcaption {
  font-style: italic;
  text-align: center;
}

.content table {
  margin-bottom: 1rem;
}

.content h1,
.content h2,
.content h3,
.content h4,
.content h5,
.content h6 {
  margin-top: 2.7rem;
  margin-bottom: 1.3rem;
}

/** Headings next to each other must be closer */
.content h2 + h2,
.content h2 + h3,
.content h2 + h4,
.content h2 + h5,
.content h2 + h6,
.content h3 + h2,
.content h3 + h3,
.content h3 + h4,
.content h3 + h5,
.content h3 + h6,
.content h4 + h2,
.content h4 + h3,
.content h4 + h4,
.content h4 + h5,
.content h4 + h6,
.content h5 + h2,
.content h5 + h3,
.content h5 + h4,
.content h5 + h5,
.content h5 + h6,
.content h6 + h2,
.content h6 + h3,
.content h6 + h4,
.content h6 + h5,
.content h6 + h6 {
  margin-top: 1.5rem;
}

.content iframe {
  max-width: 100%;
  display: block;
  margin-bottom: 2rem;
}

/* Syntax highlighting is not available for the RSS articles, but at least
this makes the code blocks a bit more readable. */
.content pre {
  background: #272822;
  padding: 1rem;
  border-radius: 0.3rem;
  font-size: 0.95rem;
  min-width: 700px;
  max-width: 1000px;
  width: fit-content;
  overflow-x: auto;
  margin-left: auto;
  margin-right: auto;
}

@media screen and (max-width: 767px) {
  .content pre {
    min-width: auto;
    width: 100%;
  }
}

